--- a/style/styles.css
+++ b/style/styles.css
@@ -174,6 +174,9 @@ footer {
     background-color: #007BFF;
     color: #fff;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     padding: 10px;
     margin-top: 20px;
     font-size: 14px;
