--- a/style/styles.css
+++ b/style/styles.css
@@ -124,6 +124,7 @@ input:checked + .slider:before {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-top: 20px;
+    margin-bottom: 100px;
 }
 
 .qoute {
@@ -177,7 +178,6 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 10px;
     margin-top: 20px;
-    font-size: 14px;
+    font-size: 16px;
 }
