--- a/style/styles.css
+++ b/style/styles.css
@@ -18,6 +18,27 @@ header {
     box-shadow: 0 8px 16px 0 rgba(0, 99, 255, .2);
 }
 
+select {
+    width: 150px;
+    padding: 6px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+    background-color: #fff;
+    transition: border-color 0.2s ease-in-out;
+}
+
+select:hover {
+    border-color: #007BFF;
+}
+
+select:focus {
+    outline: none;
+    border-color: #007BFF;
+}
+
 .checkbox-wrapper-54 {
     display: block;
     position: relative;
@@ -82,8 +103,23 @@ input:checked + .slider:before {
     background-color: white;
 }
 
+textarea {
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    color: #333;
+    background-color: #fff;
+    transition: border-color 0.2s ease-in-out;
+
+}
+
 .input-box {
-    max-width: 600px;
+    width: 500px;
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
@@ -98,7 +134,7 @@ input:checked + .slider:before {
 }
 
 .input-box input {
-    width: 100%;
+    width: 97%;
     padding: 8px;
     margin-bottom: 16px;
     border: 1px solid #ccc;
@@ -135,16 +171,12 @@ input:checked + .slider:before {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
-}
-
-.qoute h3 {
-    color: #007BFF;
 }
 
 .qoute p {
     color: #000;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
 }
 
 .edit-form {
